ex3.09/manifests/pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pingpong
  name: pingpong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: maxmynter/devopsk8s-pingpong@sha256:17f4f804cf43559b1b8ff4b3166dd31335ae4d6325863eafcd5bed73e2064b9c
          resources:
            limits:
              cpu: "150m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  namespace: pingpong
  name: pingpong-svc
spec:
  type: NodePort
  selector: 
    app: pingpong
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
