ex3.09/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pingpong-ing
  namespace: pingpong
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: server-svc
              port:
                number: 80
        - path: /pingpong
          pathType: Prefix
          backend:
            service:
              name: pingpong-svc
              port:
                number: 80
